--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,21 @@ margin-left: 30px;
   color: var(--accent-color);
 }
 /*------------Hero--------------*/
+.conteiner-hero {
+  width: 1600px;
+  margin: 0 auto; 
+}
 .hero-content {
+  background: #C4C4C4;
+  width: 1600px;
+  height: 600px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+   rgba(47, 48, 58, 0.4)),
+  url(../images/Img\ hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  
   padding-top: 200px;
   padding-bottom: 200px;
   display:flex;
