--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -47,6 +47,13 @@ min-width: 40px;
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
+    
+}
+.progect-item:hover{
+    background: #FFFFFF;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .progect-text {
     padding: 20px 24px 20px 24px;
