--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ fill: currentColor;
   align-items: center;
 }
 .hero-title {
-max-width: 696px;
+max-width: 650px;
 margin-bottom: 30px;
 font-weight: 900;
 font-size: 44px;
@@ -162,16 +162,15 @@ margin-left: -30px;
 flex-basis: calc(100% / 4 - 30px);
 margin-left: 30px;
 }
-.slogan-icon {
-width: 270px;
-height: 120px;
-padding: 25px 100px 25px 100px;
-background: #F5F4FA;
-border-radius: 4px;
-margin-bottom: 30px;
-display: flex;
-align-items: center;
-justify-content: center;
+.slogan-icon-pic {
+  width: 270px;
+  height: 120px;
+  background: #F5F4FA;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .slogan-title {
 margin-bottom: 10px;
@@ -215,6 +214,7 @@ color: var(--header-color);
 .command {
   padding-top: 94px;
   padding-bottom: 94px;
+  background-color: #F5F4FA;
 }
 .command-list {
 display: flex;
@@ -256,7 +256,7 @@ border-radius: 0px 0px 4px 4px;
 }
 .command-text {
   padding-top: 30px;
-  padding-bottom: 16px;
+  padding-bottom: 30px;
 }
 .command-soc-list {
   display: flex;
@@ -313,11 +313,17 @@ align-items: center;
 justify-content: center;
 fill: #AFB1B8;
 }
-.clients-link:hover {
+.clients-link:hover, 
+.clients-link:focus {
 background-color: #FFFFFF;
 fill: var(--accent-color);
 border: 1px solid var(--accent-color);
 border-radius: 4px;
+}
+.clients-link-svg:hover,
+.clients-link-svg:focus {
+  background-color: #FFFFFF;
+  fill: var(--accent-color);  
 }
 
 /*--------------Подвал---------------*/
